Update min_beg.tex, min_ubeg.tex, and 9 more files...

--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -52,7 +52,7 @@ Ligninger i $\R^2$ kan repræsenteres ved linjer og i $\R^3$ kan de repræsenter
 % Er det en eller et plan? Hess siger altid "en"... Hmmmmm.. 
 Hvis disse ligninger er parallelle og forskellige, har systemet ingen løsning.
 Hvis ligningerne er forskellige, så har systemet præcis én løsning, hvor ligningerne krydser hinanden. 
-Hvis ligningerne er ens, har systemet uendeligt mange løsninger.\\
+Hvis ligningerne er ens, har systemet uendeligt mange løsninger.\\\\
 Et system der har én eller flere løsninger kaldes \textbf{konsistent}; ellers kaldes det \textbf{inkonsistent}, da der ingen løsninger eksisterer.
 %
 %
