--- a/incl/main/linear_optimeringsproblemer/standardform.tex
+++ b/incl/main/linear_optimeringsproblemer/standardform.tex
@@ -11,12 +11,14 @@ Hvis et lineært optimeringsproblem er på formen
 \end{align*}
 %
 er optimeringsproblemet på \textbf{standardform}.
-Bemærk, at på standardform er problemet et minimeringsproblem, og betingelserne er lighedsbetingelser og ikke-negativsbetingelser.\\\\
+Bemærk, at på standardform er problemet et maksimumsproblem, og betingelserne er lighedsbetingelser og ikke-negativsbetingelser.
+\\\\
 %
 For at omskrive et minimumsproblem til et maksimumsproblem multipliceres objektfunktionen med $-1$.
-Ulighedsbetingelserne ændres ligeledes fra $A_ix_i \geq b_i$ til $A_ix_i \leq b_i$.
-Derefter tilføjes \textbf{slack-variabler} til venstre side af ulighederne for at gøre dem til ligheder.
-I denne rapport notes slack-variabler $s_i$.
+Ulighedsbetingelserne ændres ligeledes fra $A_ix_i \geq b_i$ til $-A_ix_i \leq -b_i$.
+\\\\
+For at få et givet problem med ulighedsbetingelser på standardform tilføjes \textbf{slack-variable} til venstre side af ulighederne for at gøre dem til ligheder.
+I denne rapport noteres slack-variabler $s_i$.
 Variabler, der ikke har en ikke-negativsbegrænsning, opdeles i $x_i^+$ og $x_i^-$, da alle reelle tal kan skrives som differensen mellem to positive tal.
 Med denne fremgangsmåde kan alle lineære optimeringsproblemer omskrives til standardform.
 Det er derfor kun nødvendigt med en metode til at løse optimeringsproblemer på denne form.
@@ -39,9 +41,9 @@ Minimumsproblemet fra eksempel \ref{eks:min_lin} er her omskrevet til standardfo
 \begin{align*}
 \begin{array}{lrcccrcrcrcrcrcr}
 \text{Maksimér}		&	\multicolumn{2}{c}{-4x_1 + 3x_2}\\
-\text{begrænset af}	&2x_1	&-	&x_2		&+	&s_1&	&	&	&	&	&	&= 		&-10,\\
-					&-x_1	&+	&x_2		&	&	&+	&s_2&	&	&	&	&=		& -7,\\
-					&x_1	&+	&x_2		&	&	&	&	&+	&s_3&	&	&=		& 20,\\
+\text{begrænset af}	&2x_1	&-	&x_2^+-x_2^-		&+	&s_1&	&	&	&	&	&	&= 		&-10,\\
+					&-x_1	&+	&x_2^+-x_2^-		&	&	&+	&s_2&	&	&	&	&=		& -7,\\
+					&x_1	&+	&x_2^+-x_2^-		&	&	&	&	&+	&s_3&	&	&=		& 20,\\
 					& 		&	&x_2^+-x_2^-&	&	&	&	&	&	&+	&s_4&=		& 12,\\
 					&x_1	&	&			&	&	&	&	&	&	&	&	&\geq	& 0,\\
 					&		&	&x_2^+,x_2^-&	&	&	&	&	&	&	&	&\geq	& 0.\\
