--- a/fig/tikz/min_beg.tex
+++ b/fig/tikz/min_beg.tex
@@ -28,6 +28,6 @@
 
 \end{axis}
 \end{tikzpicture}
-\caption{Betingelserne, der danner en begrænset løsningsmængde, (markeret med blå) for minimeringsproblemet.}
+\caption{En begrænset løsningsmængde, markeret med gråblåt, afgrænset af lineære betingelser.}
 \label{fig:min_beg}
 \end{figure}
