--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -29,7 +29,7 @@ s_n
 \end{bmatrix},
 $
 \end{center}
-i $\R ^n$, således at alle ligninger er opfyldt, når $x_i$ erstattes med $s_i$. Et eksempel på et lineært ligningssystem ses i eksempel \ref{ekslignsys}.
+i $\R ^n$, således at alle ligninger er opfyldt, når $x_i$ erstattes med $s_i$. Et eksempel på et lineært ligningssystem ses i eksempel \ref{eks:lignsys}.
 %
 \\
 \begin{eks}
@@ -108,7 +108,7 @@ a_{m,1} & a_{m,2} & \cdots & a_{m,n} & b_{m}\\
 \end{equation*}
 %
 \begin{eks}
-Med udgangspunkt i ligningssystemet fra eksempel \ref{ekslignsys} følger det at
+Med udgangspunkt i ligningssystemet fra eksempel \ref{eks:lignsys} følger det at
 $$A=
 \begin{bmatrix}
 1 & 0 & -1 & -2 & -8\\
