--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -28,6 +28,6 @@ Lad $\mathbf{a} \neq \mathbf{0}$ være en vektor i $\R^n$ og lad $b$ være en sk
 \end{enumerate}
 \end{defn}
 Det gælder her at hyperplanet er grænsen for et tilsvarende delrum.
-I $\R^2$$ vil hyperplanet således være en ret linje der afskære en del af rummet.
+I $\R^2$ vil hyperplanet således være en ret linje der afskære en del af rummet.
 Et polyhedron er derfor en samling af polyeder der til sammen skaber en geometrisk figur i et givet vektorrum.
 %ligeldes bør der nævnes noget med at a står vinkelret på linjen 
