--- a/fig/tikz/dom.tex
+++ b/fig/tikz/dom.tex
@@ -31,7 +31,7 @@
 
 	\draw[black, fill=black] (0,-5) circle (0pt) node[anchor=west] {Domæne};
 	\draw[black, fill=black] (6,-5) circle (0pt) node[anchor=west] {Codomæne};
-	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Billedmængde};    
+	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Værdimængde};    
 	%Streger mellem punkterne
   \end{tikzpicture}
   \caption{En funktion fra $\S_1$ til $\S_2$, hvor $f(\textbf{v})=\textbf{w}$ og f$(\textbf{u})=\textbf{w}$. }
