Update Hyperplan_halvrum_polyeder.tex and alg_hjorne.tex

--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -5,6 +5,7 @@ Hvis en vektor $\textbf{x}$ opfylder $\textbf{a}^T_i\textbf{x}= b_i$ for $i \in 
 Følgende sætning giver anledning til hvordan disse bindende betingelser kan føres i relation til løsninger af lineære optimeringsproblemer.
 %
 \begin{thm}{}{}
+
 Lad $\textbf{x}$ være et element i $\R^n$ og lad $I=\{i|\textbf{a}^T_i\textbf{x}=b_i\}$ være en mængde af indexer på betingelser, der er bindende ved $\textbf{x}$.
 Så er følgende udsagn ækvivalente.
 %
@@ -16,5 +17,5 @@ Så er følgende udsagn ækvivalente.
 \end{thm}
 %
 \begin{proof}
-Smukt bevis INC
+Smukt bevis INC.
 \end{proof}
