Update apend_a.tex and cmds.tex

--- a/incl/main/appendicer/apend_a.tex
+++ b/incl/main/appendicer/apend_a.tex
@@ -45,7 +45,7 @@ Enhver matrix kan, ved hjælp af elementære rækkeoperationer, kun blive omdann
 \end{thm}
 %
 \begin{proof}\label{entydigbevis}
-I følgende bevis refereres der til de tidligere egenskaber for en matrix på reduceret trappeform. \\
-Lad $A$ væære en matrix og $R$ være den reduceret trappeform af $A$. Udfra egenskab (a), så gælder det, at en søjle i $R$ er en pivotsøjle i $R$, hvis og kun hvis, den er ikke-nul og ikke er en linearkombination af de forudgående pivotsøjler i $R$. Jævnfør \ref{thm:redutrap} gælder det, at hvis en søjle i $R$ er en pivotsøjle, så er den ikke en linearkombination af de forudgående søjler i $R$ og deraf er søjlen i $A$ heller ikke en linearkombination af de forudgående  søjler i $A$, hvilket betyder at positionerne af pivotsøjlerne i $R$ er entydigt bestemt af søjlerne i $A$. Endvidere gælder det, udfra egenskab (b), at den $j$-te pivotsøjle i $R$ er den $j$-te standardvektor i $\R^m$, og derfor er pivotsøjlerne i $R$ endvidere entydigt bestemt af søjlerne i $A$. \\
+I følgende bevis refereres der til de tidligere egenskaber for en matrix på reduceret trappeform. \\\\
+Lad $A$ væære en matrix og $R$ være den reduceret trappeform af $A$. Udfra egenskab (a), så gælder det, at en søjle i $R$ er en pivotsøjle i $R$, hvis og kun hvis, den er ikke-nul og ikke er en linearkombination af de forudgående pivotsøjler i $R$. Jævnfør \ref{thm:redutrap} gælder det, at hvis en søjle i $R$ er en pivotsøjle, så er den ikke en linearkombination af de forudgående søjler i $R$ og deraf er søjlen i $A$ heller ikke en linearkombination af de forudgående  søjler i $A$, hvilket betyder at positionerne af pivotsøjlerne i $R$ er entydigt bestemt af søjlerne i $A$. Endvidere gælder det, udfra egenskab (b), at den $j$-te pivotsøjle i $R$ er den $j$-te standardvektor i $\R^m$, og derfor er pivotsøjlerne i $R$ endvidere entydigt bestemt af søjlerne i $A$. \\\\
 Dernæst bevises, at ikke-pivotsøjlerne i $R$ også er bestemt af søjlerne i $A$. Antag, at $\textbf{r}_j$ ikke er en pivotsøjle i $R$. Hvis $\textbf{r}_j=\textbf{0}$ medfører $\textbf{a}_j$=$\textbf{0}$ jævnfør sætning \ref{thm:redutrap}. Antag så at $\textbf{r}_j \neq \textbf{0}$, så gælder det, udfra egenskab(c), så er $\textbf{r}_j$ en linarkombination af de forudgående pivotsøjler i $R$, som er lineær uafhængig. Det gælder endvidere, at kofficienterne i linearkombination er de første indgange i $\textbf{r}_j$, hvor der er en koefficient for hver forudgående pivotsøjle, hvor de resterende indgange er nul. Jævnfør sætning \ref{thm:redutrap}, så er $\textbf{a}_j$ også en linearkombination af de forudgående pivotsøjler i $A$, som også er lineær uafhængig og har de samme koefficienter, som afhænger af $A$. Derfor er $\textbf{r}_j$ entydigt bestemt af $A$ og konkludere deraf, at $R$ er entydig bestemt af $A$. 
 \end{proof}
