--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -93,7 +93,7 @@ En matrixligning kan også opskrives ved
 \sum^n_{i=1}{A_ix_i}=\textbf{b}.
 \end{align*}
 %
-Ligningssystemet fra eksempel \ref{eks:lignsys} skrives som totalmatricen
+Totalmatricen opskrives på formen:
 \begin{equation*}
   A=
 \begin{blockarray}{cccccc}
@@ -106,8 +106,9 @@ a_{m,1} & a_{m,2} & \cdots & a_{m,n} & b_{m}\\
 \end{block}
 \end{blockarray}.
 \end{equation*}
+Ligningssystemet fra eksempel \ref{eks:lignsys} opskrives som totalmatricen i eksempel \ref{eks:lig_mat}.
 %
-\begin{eks}
+\begin{eks}\label{eks:lig_mat}
 Med udgangspunkt i ligningssystemet fra eksempel \ref{eks:lignsys} følger det at
 $$A=
 \begin{bmatrix}
