--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -55,7 +55,7 @@ Dermed er $AB^{-1}=A^{-1}B^{-1}$.
 \\\\
 (c) Antag at A er invertibel. 
 Det følger fra definition \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
-Jævnfør sætning punkt (g) i  \ref{thm:mxmulti} følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
+Jævnfør sætning \ref{thm:mxmulti}(g) følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
 Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
 Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
 \end{proof}
