--- a/incl/main/grafisk_losning/Ekstrema,punkter.tex
+++ b/incl/main/grafisk_losning/Ekstrema,punkter.tex
@@ -7,3 +7,5 @@ Lad $P$ være en polytop. en vektor $\mathbf{x} \in P$ kaldes et \textbf{ekstrem
 \end{defn}
 Et hjørne kan beskrives ud fra denne definition idet der såfremt $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$, og alle vektorene findes i $P$, gælder at $\mathbf{x}$ er en konveks kombination af $\mathbf{y}$ og $\mathbf{z}$.
 Hvis $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$ $\mathbf{y}\notin P$ og $\mathbf{x}$ er et ekstremapunkt må derfor gælde at $\mathbf{y}\notin P$ $\mathbf{z}\notin P$ eller $\mathbf{x}=\mathbf{z}$ eller $\mathbf{x}=\mathbf{y}$. Såfremt 
+
+\input{fig/tikz/ekstrema}
