--- a/incl/main/grafisk_losning/grafisk_losning.tex
+++ b/incl/main/grafisk_losning/grafisk_losning.tex
@@ -2,3 +2,4 @@
 % God arbejdslyst 
 \input{incl/main/grafisk_losning/Hyperplan_halvrum_polyeder}
 \input{incl/main/grafisk_losning/alg_hjorne}
+\input{incl/main/grafisk_losning/Ekstrema,punkter}
