Update dom.tex, Lineaer_afbilding.tex, and 15 more files...

--- a/fig/tikz/dom.tex
+++ b/fig/tikz/dom.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h!]
+\begin{figure}[h!!]
   \centering
   \begin{tikzpicture}
     \tikzset{punkt/.style={point, draw=black}}\draw[color=black](1,-2) circle (2.5);
@@ -31,7 +31,7 @@
 
 	\draw[black, fill=black] (0,-5) circle (0pt) node[anchor=west] {Domæne};
 	\draw[black, fill=black] (6,-5) circle (0pt) node[anchor=west] {Codomæne};
-	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Værdimængde};    
+	\draw[black, fill=black] (5.6,-2.5) circle (0pt) node[anchor=west] {Værdimængde};    
 	%Streger mellem punkterne
   \end{tikzpicture}
   \caption{En funktion fra $\S_1$ til $\S_2$, hvor $f(\textbf{v})=\textbf{w}$ og f$(\textbf{u})=\textbf{w}$. }
