--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -1,6 +1,6 @@
 \section{Lineær uafhængighed}
 % 1.7
-En mængde af vektorer i $\R^n$ kan være \textbf{lineært afhængige} eller \textbf{lineært uafhængige}.
+En mængde af vektorer i $\R^n$ kan være \textit{lineært afhængige} eller \textit{lineært uafhængige}.
 %
 %En mængde af vektorer er \textbf{lineært afhængig}, hvis alle vektorerne kan skrives som en linearkombination af de andre vektorer. 
 %Hvis ikke alle vektorerne kan skrives som en linearkombination af de andre vektorer, så er mængden \textbf{lineært uafhængige}. 
@@ -10,13 +10,13 @@ En mængde af vektorer i $\R^n$ kan være \textbf{lineært afhængige} eller \te
 % 
 \begin{defn}{Lineær afhængighed og lineær uafhængighed}{}
 %En mængde af vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots , \mathbf{u}_k \in \R^n$ kaldes lineært uafhængige, hvis der eksisterer skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
-En mængde af vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots , \mathbf{u}_k \in \R^n$ kaldes lineært uafhængige, hvis der for alle skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
+En mængde af vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots , \mathbf{u}_k \in \R^n$ kaldes \textbf{lineært uafhængige}, hvis der for alle skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
 \begin{align*}
 x_1\mathbf{u}_1 + x_2\mathbf{u}_2 + \cdots + x_k \mathbf{u}_k = \mathbf{0}, 
 \end{align*}
 kun har den trivielle løsning $x_1 = x_2 = \cdots = x_k = 0$.
 \\
-Ellers kaldes vektorerne lineært afhængige.
+Ellers kaldes vektorerne \textbf{lineært afhængige}.
 \end{defn}  
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
