--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -1,9 +1,9 @@
 \subsection{Linearkombination}
 %
-\textbf{Linearkombination} er en centralt del af lineær algebra, da det benyttes i forbindelse med løsning af ligningssystemer. 
+\textit{Linearkombination} er en centralt del af lineær algebra, da det benyttes i forbindelse med løsning af ligningssystemer. 
 %
 \begin{defn}{}{mxlinkom}
-Givet vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ med størrelsen $m \times n$, så er linearkombinationen af $\mathbf{a}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ en vektor $\mathbf{v}$ på formen 
+Givet vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ med størrelsen $m \times n$, så er \textbf{linearkombinationen} af $\mathbf{a}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ en vektor $\mathbf{v}$ på formen 
 %
 \begin{align*}
 c_1\mathbf{u}_1+c_2\mathbf{u}_2+\ldots+c_k\mathbf{u}_k=\sum\limits_{i=1}^k c_i\mathbf{u}_i=\mathbf{v},
@@ -94,20 +94,20 @@ a_n
 %
 i $\R^n$ kan skrives som linearkombination af $I_n$ i $\R^n$. 
 Givet to ikke-parallelle vektorer $\mathbf{u}$ og $\mathbf{v}$ i $\R^2$, så er enhver anden vektor i $\R^2$ en linearkombination af $\mathbf{u}$ og $\mathbf{v}$. 
-Hvis koefficienterne i en linearkombination er vektorer, så er der tale om et \textbf{matrix-vektorprodukt}.
+Hvis koefficienterne i en linearkombination er vektorer, så er der tale om et \textit{matrix-vektorprodukt}.
 %
 %
 %
 %
 \subsection{Matrix-vektorprodukt}
 %
-Som udvidelse til linearkombinationen kan der tales om et \textbf{matrix-vektorprodukt}.
+Som udvidelse til linearkombinationen kan der tales om et matrix-vektorprodukt.
 %
 %Altså, jeg vil måske mene, at nedenstående definition minder for meget om den i bogen (s. 19). Men igen... "Det er heller ikke ham, der har fundet på det." - Mads Vejleder, 2019. 
 %
 \begin{defn}{}{mvp}
 Lad $A$ være en $m \times n$ matrix og \textbf{u} være en $n \times 1$ vektor. 
-Matrix-vektorproduktet af $A$ og $\textbf{u}$ defineres som linearkombinationen af søjlerne i $A$, hvis koefficienter er de tilsvarende komponenter af $\textbf{u}$, hvilket noteres $A\textbf{u}$. 
+\textbf{Matrix-vektorproduktet} af $A$ og $\textbf{u}$ defineres som linearkombinationen af søjlerne i $A$, hvis koefficienter er de tilsvarende komponenter af $\textbf{u}$, hvilket noteres $A\textbf{u}$. 
 Dermed er
 \begin{align*}
 A\textbf{u} =u_1\textbf{a}_1 + u_2\textbf{a}_2 + \cdots + u_n\textbf{a}_n.
