--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -2,10 +2,10 @@
 %  
 % Noget indledningsvist - hvorfor er matricer/vektorer vigtige? 
 %
-I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer er det nødvendigt at introducere \textbf{matricer} og tilhørende notation. 
+I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer er det nødvendigt at introducere \textit{matricer} og tilhørende notation. 
 %
 \begin{defn}{}{}
-En matrix er en rektangulær tabel, hvis elementer er \textbf{skalarer}, der er $k \in \R$. 
+En \textbf{matrix} er en rektangulær tabel, hvis elementer er \textbf{skalarer}, der er $k \in \R$. 
 En matrix med $m$ rækker og $n$ søjler har størrelsen $m \times n$.
 Hvis $m=n$, er matricen kvadratisk, noteret $n \times n$.
 Elementet $a_{i,j}$ i $i$'te række og $j$'te søjle kaldes den $(i,j)$'te-indgang i matricen. 
@@ -29,10 +29,10 @@ $$
 	\caption{En $m \times n$ matrix $A$.}
 	\label{fig:matrix_gen_eks}
 \end{figure}
-\noindent
 %
-Enhver række $i$ eller søjle $j$ kan betragtes som en \textbf{vektor}. 
-En matrix med én række kaldes en \textbf{rækkevektor}, og en matrix med én søjle kaldes en \textbf{søjlevektor}. 
+\noindent
+Enhver række $i$ eller søjle $j$ kan betragtes som en \textit{vektor}. 
+En matrix med én række kaldes en \textit{rækkevektor}, og en matrix med én søjle kaldes en \textit{søjlevektor}. 
 Med mindre andet er angivet opereres der med søjlevektorer.
 I denne rapport noteres vektorer med små, fede bogstaver, såsom $\textbf{u}$ og $\textbf{v}$. 
 Søjlevektorer noteres ofte med et indeks tilsvarende søjlen i matricen, eksempelvis:
