--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -1,15 +1,15 @@
 \subsection{Matrixsum og skalering}
 % 
 Der er behov for at lave opperationer på en matrix i forbindelse med løsning af lineære programmeringsproblemer. 
-To af disse er \textbf{matrixsum} og \textbf{skalering}.
+To af disse er \textit{matrixsum} og \textit{skalering}.
 %
 \begin{defn}{}{mxsum}
 Lad $A$ og $B$ være $m \times n$ matricer.
-Summen af $A$ og $B$ er $m \times n$ matricen $A + B$, hvor den $(i,j)$'te indgang er $a_{i,j} + b_{i,j}$.
+\textbf{Summen} af $A$ og $B$ er $m \times n$ matricen $A + B$, hvor den $(i,j)$'te indgang er $a_{i,j} + b_{i,j}$.
 Ligeledes er subtraktion mellem matricerne $A$ og $B$ muligt, og indgangene i den resulterende matrix er $a_{i,j} - b_{i,j}$.
 \\
 Lad nu $c$ være en skalar.
-Skalering, også kaldet skalarmultiplikation, af $A$, noteret $cA$, er en $m \times n$ matrix, hvor den $(i,j)$'te indgang er $ca_{i,j}$.
+\textbf{Skalering}, også kaldet skalarmultiplikation, af $A$, noteret $cA$, er en $m \times n$ matrix, hvor den $(i,j)$'te indgang er $ca_{i,j}$.
 \end{defn}
 \noindent
 %
