--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -1,13 +1,13 @@
 \subsection{Matrixtransponering}
 %
-\textbf{Matrixtransponering} er i nogen henseender brugbart. 
+\textit{Matrixtransponering} er i nogen henseender brugbart. 
 %
 % Henseender = Sammenhænge 
 %
 % \textbf{Matrixtransponering} er faktisk rimelig unødvendigt xD 
 %
 \begin{defn}{}{mxtrans}
-Lad $A$ være en $m \times n$ matrix. Transponeringen af $A$, er en $n \times m$ matrix, noteret $A^T$, hvor $A$'s $(i,j)$'te indgang er den $(j,i)$'te indgang i $A^T$.
+Lad $A$ være en $m \times n$ matrix. \textbf{Transponeringen} af $A$, er en $n \times m$ matrix, noteret $A^T$, hvor $A$'s $(i,j)$'te indgang er den $(j,i)$'te indgang i $A^T$.
 \end{defn}
 \noindent
 %
