--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -1,6 +1,6 @@
 \subsection{Udvalgte matricer og vektorer} 
 % 
-Hvis alle indgange i en matrix er nul, kaldes dette for en \textbf{nulmatrix}. 
+Hvis alle indgange i en matrix er nul, kaldes dette for en \textit{nulmatrix}. 
 En $m \times n$ nulmatrix noteres $O_{m,n}$.
 %
 Et andet særtilfælde er standardvektorerne i $\R^n$, som er defineret ved  
