--- a/incl/main/linear_algebra/span/dim.tex
+++ b/incl/main/linear_algebra/span/dim.tex
@@ -1,6 +1,6 @@
 \subsection{Dimension}
 I forlængelse af underrum og basis introduceres nu
-$\mathbf{dimension}$. 
+\textit{dimension}. 
 %
 \begin{defn}{}{dimension}
 Mængden af vektorer, der udgør en basis for et givent ikke-nul-undderrum $V$ i $\R^n$, betegnes som dimensionen af $V$, hvilket noteres $\text{dim}(V)$. 
@@ -8,7 +8,7 @@ Mængden af vektorer, der udgør en basis for et givent ikke-nul-undderrum $V$ i
 \end{defn}
 \noindent
 Det betyder derfor generelt, at standardbasen for $\R^n$ indeholder $n$ vektorer, og derfor er $\text{dim}(\R^n) = n$. 
-Dertil kan man betragte bestemte underrum associeret med matricer samt deres dimensioner. 
+Dertil kan man betragte bestemte underrum associeret med matricer samt deres \textbf{dimensioner}. 
 Der gælder for dimensionerne af underrummet for en $m \times n$ matrix, at pivotsøjlerne i enhver matrix danner en basis for dens søjlerum. 
 Derfor er $\text{dim}(\text{søj}(A))$ lig med mængden af pivotsøjler i en matrix $A$ og dermed lig med $\text{rang}(A)$. 
 Nulrummets dimension for en matrix er givet ved nulliteten af matricen $A$, altså $n-\text{rang}(A)$. 
