--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -1,9 +1,9 @@
 \chapter{Lineær optimeringsproblemer}
 %
-Lineære programmering er en problemstilling, hvor det ønskes at optimere et problem bestående af en lineær funktion og \textbf{lineære betingelser}.
-Funktionen, som optimeres, kaldes \textbf{objektfunktionen}.
+Lineære programmering er en problemstilling, hvor det ønskes at optimere et problem bestående af en lineær funktion og \textit{lineære betingelser}.
+Funktionen, som optimeres, kaldes \textit{objektfunktionen}.
 Objektfunktionen kan enten optimeres for maksimum eller minimum og er begrænset af de lineære betingelser.
-Findes et maksimum eller minimum inden for begrænsningerne, kaldes dette for problemets \textbf{optimale værdi}.
+Findes et maksimum eller minimum inden for begrænsningerne, kaldes dette for problemets \textit{optimale værdi}.
 \\\\
 %
 Et lineært maksimumsproblem kan opstilles som følgende:
@@ -20,9 +20,9 @@ Et lineært maksimumsproblem kan opstilles som følgende:
 \end{align*}
 %
 hvor $\textbf{c}^T\textbf{x}$ er objektfunktionen og $\textbf{a}^T\textbf{x}$ er de lineære betingelser samt $M_1, M_2, M_3, N_1, N_2$ er endelige mængder med indekser.
-\textbf{Løsningsmængden} betegner mængden af vektorer, som opfylder alle betingelserne.
-Vektorer indeholdt i løsningsmængden kaldes for \textbf{løsningsvektorer}.
-Hvis mulighedsområdet er uendeligt stort, kaldes optimeringsproblemet for \textbf{ubegrænset}; ellers kaldes det \textbf{begrænset}.\\\\
+\textit{Løsningsmængden} betegner mængden af vektorer, som opfylder alle betingelserne.
+Vektorer indeholdt i løsningsmængden kaldes for \textit{løsningsvektorer}.
+Hvis mulighedsområdet er uendeligt stort, kaldes optimeringsproblemet for \textit{ubegrænset}; ellers kaldes det \textit{begrænset}.\\\\
 %
 \begin{eks}
 \label{eks:min_lin}
