--- a/incl/main/linear_optimeringsproblemer/standardform.tex
+++ b/incl/main/linear_optimeringsproblemer/standardform.tex
@@ -10,14 +10,14 @@ Hvis et lineært optimeringsproblem er på formen
 \end{array}
 \end{align*}
 %
-er optimeringsproblemet på \textbf{standardform}.
+er optimeringsproblemet på \textit{standardform}.
 Bemærk, at på standardform er problemet et maksimumsproblem, og betingelserne er lighedsbetingelser og ikke-negativsbetingelser.
 \\\\
 %
 For at omskrive et minimumsproblem til et maksimumsproblem multipliceres objektfunktionen med $-1$.
 Ulighedsbetingelserne ændres ligeledes fra $A_ix_i \geq b_i$ til $-A_ix_i \leq -b_i$.
 \\\\
-For at få et givet problem med ulighedsbetingelser på standardform tilføjes \textbf{slack-variable} til venstre side af ulighederne for at gøre dem til ligheder.
+For at få et givet problem med ulighedsbetingelser på standardform tilføjes \textit{slack-variable} til venstre side af ulighederne for at gøre dem til ligheder.
 I denne rapport noteres slack-variabler $s_i$.
 Variabler, der ikke har en ikke-negativsbegrænsning, opdeles i $x_i^+$ og $x_i^-$, da alle reelle tal kan skrives som differensen mellem to positive tal.
 Med denne fremgangsmåde kan alle lineære optimeringsproblemer omskrives til standardform.
