--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -1,6 +1,6 @@
 \section{Lineære ligningssystemer }
 %
-En \textbf{lineær ligning} med variablerne $x_1,x_2,\ldots ,x_n$ er en ligning, som har formen
+En \textit{lineær ligning} med variablerne $x_1,x_2,\ldots ,x_n$ er en ligning, som har formen
 $$ c_1x_1+c_2x_2+\cdots+c_nx_n=b \text{,}$$ 
 hvor $\{c_1,c_2,\ldots,c_n\} \in \R$. 
 %
@@ -52,10 +52,12 @@ Ligninger i $\R^2$ kan repræsenteres ved linjer og i $\R^3$ kan de repræsenter
 % Er det en eller et plan? Hess siger altid "en"... Hmmmmm.. 
 Hvis disse ligninger er parallelle og forskellige, har systemet ingen løsning.
 Hvis ligningerne er forskellige, så har systemet præcis én løsning, hvor ligningerne krydser hinanden. 
-Hvis ligningerne er ens, har systemet uendeligt mange løsninger.\\\\
-Et system der har én eller flere løsninger kaldes \textbf{konsistent}; ellers kaldes det \textbf{inkonsistent}, da der ingen løsninger eksisterer.
+Hvis ligningerne er ens, har systemet uendeligt mange løsninger.
+\\\\
 %
+Et system der har én eller flere løsninger kaldes \textit{konsistent}; ellers kaldes det \textit{inkonsistent}, da der ingen løsninger eksisterer.
 %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \subsection{Ligningssystemer og matricer}
 Et lineært ligningssystem kan opstilles som en matrixligning $A\textbf{x}=\textbf{b}$, hvor
@@ -83,9 +85,9 @@ b_m
 \end{bmatrix}.
 $$
 %
-A kaldes for \textbf{koefficientmatricen}. 
+A kaldes for \textit{koefficientmatricen}. 
 %efter hårdt sammenleje bliver A matricen og b til totalmatricen
-\textbf{Totalmatrixen} $[A \text{    } | \mathbf{b}]$ dannes ved at kombinere koefficientmatricen med vektoren \textbf{b}.
+\textit{Totalmatrixen} $[A \text{    } | \mathbf{b}]$ dannes ved at kombinere koefficientmatricen med vektoren \textbf{b}.
 Totalmatrixen indeholder alle informationer, der skal bruges til at løse et lineært ligningssystem.
 En matrixligning kan også opskrives ved
 %
@@ -106,6 +108,8 @@ a_{m,1} & a_{m,2} & \cdots & a_{m,n} & b_{m}\\
 \end{block}
 \end{blockarray}.
 \end{equation*}
+%
+\\
 Ligningssystemet fra eksempel \ref{eks:lignsys} opskrives som totalmatricen i eksempel \ref{eks:lig_mat}.
 %
 \begin{eks}\label{eks:lig_mat}
